# data_intelligence_specialty_unlp

./: .$pipeline.drawio.bkp  LSTM_model.ipynb  alpha_vantage_API_request_line.ipynb  alpha_vantage_API_request_line.py  csv_to_influxdb.ipynb  environment.yml  eth_returns_forecaster.ipynb  eth_returns_forecaster_final.ipynb  pipeline.drawio  pyproject.toml  readme.md
.ipynb_checkpoints/: LSTM_model-checkpoint.ipynb  SARIMAX_model-checkpoint.ipynb  alpha_vantage_API_request_line-checkpoint.ipynb  alpha_vantage_API_request_line-checkpoint.py
